bin_PROGRAMS=revcom clustalwtofasta tohudson2001 trimallgaps toLDhat mstoexhap tophylip LDhat_to_exhap fillInSeq
revcom_SOURCES=revcom.cc  revcom.1 sequtils.1
clustalwtofasta_SOURCES=clustalwtofasta.cc  clustalwtofasta.1
tohudson2001_SOURCES=tohudson2001.cc makeLocusList.cc makeLocusList.hpp  poolCommon.hpp poolCommon.cc  
trimallgaps_SOURCES=trimallgaps.cc  trimallgaps.1
toLDhat_SOURCES=toLDhat.cc makeLocusList.cc makeLocusList.hpp  poolCommon.hpp poolCommon.cc  toLDhat.1
mstoexhap_SOURCES=mstoexhap.cc
tophylip_SOURCES=tophylip.cc
LDhat_to_exhap_SOURCES=LDhat_to_exhap.cc
fillInSeq_SOURCES=fillInSeq.cc

man_MANS=sequtils.1 revcom.1 trimallgaps.1 clustalwtofasta.1 toLDhat.1

CXXFLAGS = -O3 -Wall   -I$(includedir)
CFLAGS = -O3 -Wall   -I$(includedir)
